--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.4.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-awesome": "^4.0.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
